--- a/trunk/theme/default/ChuWiki.css
+++ b/trunk/theme/default/ChuWiki.css
@@ -99,7 +99,6 @@ a[hreflang]::after{
 #Logo
 {
     font-size: 2em;
-    float: right;
     color: #999;
     line-height: 1em;
     margin: 0;
@@ -109,7 +108,7 @@ h1
 {
 	font-family: "Trebuchet MS", Verdana, "Bitstream Vera Sans", sans-serif;
 	color: #111;
-	margin: 1em 0 2em 0;
+	margin: 0;
 }
 
 h2
@@ -132,25 +131,22 @@ h3
 }
 
 #Utils{
-	padding: 4px 8px;
-	margin: 1em 0;
-	background: #F2F2F2 url(gfx/tb.png) repeat-x;
-	color: #000;
-	border: 1px solid #CCC;
-	-moz-border-radius: 5px;
 	position: absolute;
 	font-size: 90%;
-	top: 5em;
+	padding: 5px 0;
+	right: 1em;
+	top: 1em;
 }
 
 #Utils li{
-	padding: 4px 0;
 	display: inline;
-	border-left: 1px solid #CCC;
-	border-right: 1px solid #CCC;
+	padding: 4px 0;
 }
 
 #Utils li a{
+	border: 1px solid #666;
+	-moz-border-radius: 5px 5px 4px 4px;
+	background: #F2F2F2 url(../default/gfx/tb.png) repeat-x;
 	padding: 4px 8px;
 	color: #333;
 	text-decoration: none;
@@ -158,7 +154,8 @@ h3
 
 #Utils li a:hover{
 	color: #000;
-	background: #EEE url(gfx/tbh.png) repeat-x;
+	background: #EEE url(../default/gfx/tbh.png) repeat-x;
+	border-color: #000;
 }
 
 /* Contenu
