--- a/trunk/theme/default/ChuWiki.css
+++ b/trunk/theme/default/ChuWiki.css
@@ -130,7 +130,8 @@ h3
 	display: none;
 }
 
-#Utils{
+#Utils
+{
 	position: absolute;
 	font-size: 90%;
 	padding: 5px 0;
@@ -186,6 +187,7 @@ textarea, select{
 	width: 100%;
 	font-family: Trebuchet MS, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 90%;
+	border: 1px solid #ccc;
 }
 
 #Rules
